2010-01-12	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* arm_exc_abort.S: New file.
	* Makefile.am: Update for new file.
	* arm_exc_interrupt.S, cpu.c, rtems/asm.h, rtems/score/cpu.h: Changed
	macros which switch from and to THUMB mode.  Added a default prefetch
	and data abort handler which reports the complete processor context.
	Added PSR defines.

2009-12-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/arm.h: Recognize ARMv5TEJ.
	* arm_exc_interrupt.S: The previous implementation was broken.  In
	case of a nested interrupt the link register of the INT mode was not
	properly restored.  This lead to a major rewrite.  Interrupt
	processing is now done in SVC mode.

2009-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/arm.h: Recognize ARMv7A.

2009-10-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems/score/arm.h: Recognize ARMv6J as needed by arm1136 variants.

2009-09-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* rtems/score/cpu.h: Fix for inline asm in _CPU_Fatal_halt().
	* rtems/asm.h: Added macro to define ARM functions.
	* cpu_asm.S, arm_exc_handler_low.S: Use macro from above.

2009-08-19	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems/score/cpu.h: Mark _CPU_Context_restore() as noreturn so the
	compiler will not generate code thinking it returns.

2009-07-15	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* arm_exc_handler_high.c, arm_exc_handler_low.S, arm_exc_interrupt.S:
	New files.
	* Makefile.am: Update.
	* rtems/score/cpu.h:  Removed all generic comments.  Changed inline
	assembler of interrupt support functions.  Removed operating system
	support for fast interrupts (FIQ).  Overall cleanup.
	* cpu.c: Changed type of arm_cpu_mode to uint32_t to match the type in
	_CPU_Context_Initialize().  Moved exception handler code into
	'arm_exc_handler_high.c'.  _CPU_ISR_install_vector() writes now only
	if necessary.