@@ -19,6 +19,10 @@
  * http://www.rtems.com/license/LICENSE.
  */
 
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
 #include <rtems/asm.h>
 #include <rtems/score/cpu.h>
 
